Few interfaces tweeked

--- a/src/teaeli/IngredientDetails.form
+++ b/src/teaeli/IngredientDetails.form
@@ -41,7 +41,7 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="jPanel1" pref="523" max="32767" attributes="0"/>
+              <Component id="jPanel1" pref="590" max="32767" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
@@ -84,7 +84,7 @@
                       <Group type="102" alignment="1" attributes="0">
                           <Component id="jLabel4" min="-2" max="-2" attributes="0"/>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
-                          <Component id="unitPriceTxt" min="-2" pref="200" max="-2" attributes="0"/>
+                          <Component id="unitPriceTxt" min="-2" pref="300" max="-2" attributes="0"/>
                       </Group>
                       <Component id="jButton1" min="-2" max="-2" attributes="0"/>
                       <Group type="102" attributes="0">
@@ -95,13 +95,13 @@
                           </Group>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                              <Component id="itemNameTxt" max="32767" attributes="0"/>
-                              <Component id="itemTypeCombo" max="32767" attributes="0"/>
-                              <Component id="supplierCombobox" pref="200" max="32767" attributes="0"/>
+                              <Component id="itemNameTxt" pref="300" max="32767" attributes="0"/>
+                              <Component id="itemTypeCombo" pref="300" max="32767" attributes="0"/>
+                              <Component id="supplierCombobox" pref="300" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
-                  <EmptySpace min="82" pref="115" max="32767" attributes="0"/>
+                  <EmptySpace min="82" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
