Add new blend Flavour combo loaded

--- a/src/teaeli/AddNewBlend.form
+++ b/src/teaeli/AddNewBlend.form
@@ -285,6 +285,9 @@
             </Property>
             <Property name="selectedIndex" type="int" value="-1"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="flavourComboActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel5">
           <Properties>
