--- a/src/teaeli/AdminPannel.form
+++ b/src/teaeli/AdminPannel.form
@@ -173,7 +173,7 @@
                       <Table columnCount="4" rowCount="1">
                         <Column editable="false" title="Order ID" type="java.lang.Object"/>
                         <Column editable="false" title="Status" type="java.lang.Object"/>
-                        <Column editable="false" title="Date" type="java.lang.Object"/>
+                        <Column editable="false" title="Placed Date" type="java.lang.Object"/>
                         <Column editable="false" title="Placed By" type="java.lang.Object"/>
                       </Table>
                     </Property>
@@ -201,7 +201,7 @@
                         </Column>
                       </TableColumnModel>
                     </Property>
-                    <Property name="rowHeight" type="int" value="20"/>
+                    <Property name="rowHeight" type="int" value="24"/>
                     <Property name="tableHeader" type="javax.swing.table.JTableHeader" editor="org.netbeans.modules.form.editors2.JTableHeaderEditor">
                       <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
                     </Property>
